improve position-based generics for actions / impacts